<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.pit.administrator.textconsole.MainActivity">
    <item android:id="@+id/slot0"
          android:title="@string/action_slot0"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/slot1"
          android:title="@string/action_slot1"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/slot2"
          android:title="@string/action_slot2"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/slot3"
          android:title="@string/action_slot3"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/slot4"
          android:title="@string/action_slot4"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/slot5"
          android:title="@string/action_slot5"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/slot6"
          android:title="@string/action_slot6"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/slot7"
          android:title="@string/action_slot7"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/slot8"
          android:title="@string/action_slot8"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/slot9"
          android:title="@string/action_slot9"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
